Frequent Windows debug Webrender swr svg/fragid-shadow-X.html == svg/fragid-shadow-ref.html | crash-check | This test left crash dumps behind, but we weren't expecting it to! | After Assertion failure: mCurrentRT (No render target)
Categories
(Core :: Graphics: WebRender, defect, P5)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox82 | --- | unaffected |
| firefox83 | --- | unaffected |
| firefox84 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: mattwoodrow)
References
(Regression)
Details
(Keywords: intermittent-failure, regression, Whiteboard: [retriggered])
Crash Data
Attachments
(1 file, 1 obsolete file)
Filed by: nbeleuzu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=320880861&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Y_j4hqfdSZyHlSdG2nLXcQ/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Y_j4hqfdSZyHlSdG2nLXcQ/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1
[task 2020-11-05T22:45:14.922Z] 22:45:14 INFO - REFTEST TEST-START | layout/reftests/svg/fragid-shadow-5.html == layout/reftests/svg/fragid-shadow-ref.html
[task 2020-11-05T22:45:14.922Z] 22:45:14 INFO - REFTEST TEST-LOAD | file:///C:/Users/task_1604615499/build/tests/reftest/tests/layout/reftests/svg/fragid-shadow-5.html | 481 / 493 (97%)
[task 2020-11-05T22:45:14.977Z] 22:45:14 INFO - Assertion failure: mCurrentRT (No render target), at /builds/worker/checkouts/gecko/gfx/layers/d3d11/CompositorD3D11.cpp:826
[task 2020-11-05T22:45:15.059Z] 22:45:15 INFO - Initializing stack-fixing for the first stack frame, this may take a while...
[task 2020-11-05T22:45:24.491Z] 22:45:24 INFO - #01: mozilla::wr::RenderCompositorD3D11SWGL::CompositorEndFrame() [gfx/webrender_bindings/RenderCompositorD3D11SWGL.cpp:98]
[task 2020-11-05T22:45:24.491Z] 22:45:24 INFO - #02: webrender::renderer::Renderer::render_impl(webrender_api::DocumentId, webrender::internal_types::RenderedDocument*, core::option::Option<euclid::size::Size2D<i32, webrender_api::units::DevicePixel>>, unsigned long long) [gfx/wr/webrender/src/renderer.rs:3854]
[task 2020-11-05T22:45:24.491Z] 22:45:24 INFO - #03: webrender::renderer::Renderer::update() [gfx/wr/webrender/src/renderer.rs:3016]
[task 2020-11-05T22:45:24.491Z] 22:45:24 INFO - #04: mozilla::wr::RenderThread::UpdateAndRender(mozilla::wr::WrWindowId, mozilla::layers::BaseTransactionId<mozilla::VsyncIdType> const&, mozilla::TimeStamp const&, bool, mozilla::Maybe<mozilla::gfx::IntSizeTyped<mozilla::gfx::UnknownUnits> > const&, mozilla::Maybe<mozilla::wr::ImageFormat> const&, mozilla::Maybe<mozilla::Range<unsigned char> > const&, bool*) [gfx/webrender_bindings/RenderThread.cpp:491]
[task 2020-11-05T22:45:24.492Z] 22:45:24 INFO - #05: mozilla::wr::RenderThread::HandleFrameOneDoc(mozilla::wr::WrWindowId, bool) [gfx/webrender_bindings/RenderThread.cpp:331]
[task 2020-11-05T22:45:24.492Z] 22:45:24 INFO - #06: mozilla::detail::RunnableMethodImpl<mozilla::wr::RenderThread *,void (mozilla::wr::RenderThread::*)(mozilla::wr::WrWindowId, bool),1,mozilla::RunnableKind::Standard,mozilla::wr::WrWindowId,bool>::Run() [xpcom/threads/nsThreadUtils.h:1243]
[task 2020-11-05T22:45:24.492Z] 22:45:24 INFO - #07: MessageLoop::RunTask(already_AddRefed<nsIRunnable>) [ipc/chromium/src/base/message_loop.cc:466]
[task 2020-11-05T22:45:24.492Z] 22:45:24 INFO - #08: MessageLoop::DoWork() [ipc/chromium/src/base/message_loop.cc:550]
[task 2020-11-05T22:45:24.492Z] 22:45:24 INFO - #09: base::MessagePumpDefault::Run(base::MessagePump::Delegate*) [ipc/chromium/src/base/message_pump_default.cc:35]
[task 2020-11-05T22:45:24.492Z] 22:45:24 INFO - #10: MessageLoop::RunHandler() [ipc/chromium/src/base/message_loop.cc:328]
[task 2020-11-05T22:45:24.492Z] 22:45:24 INFO - #11: base::Thread::ThreadMain() [ipc/chromium/src/base/thread.cc:191]
[task 2020-11-05T22:45:24.492Z] 22:45:24 INFO - #12: `anonymous namespace'::ThreadFunc(void*) [ipc/chromium/src/base/platform_thread_win.cc:20]
[task 2020-11-05T22:45:24.494Z] 22:45:24 INFO - fix-stacks: error: failed to read symbols file `C:\Users\task_1604615499\build\symbols\KERNEL32.DLL\CC28E59125064F9516DBA8AD3D6420A51\KERNEL32.DLL.sym` for `C:\windows\System32\KERNEL32.DLL`
[task 2020-11-05T22:45:24.494Z] 22:45:24 INFO - fix-stacks: note: this is expected and harmless for system libraries on debug automation runs
[task 2020-11-05T22:45:24.494Z] 22:45:24 INFO - fix-stacks: The system cannot find the path specified. (os error 3)
[task 2020-11-05T22:45:24.494Z] 22:45:24 INFO - #13: BaseThreadInitThunk [C:\windows\System32\KERNEL32.DLL + 0x13034]
[task 2020-11-05T22:45:24.544Z] 22:45:24 INFO - #14: patched_BaseThreadInitThunk(int, void*, void*) [mozglue/dllservices/WindowsDllBlocklist.cpp:588]
[task 2020-11-05T22:45:24.546Z] 22:45:24 INFO - fix-stacks: error: failed to read symbols file `C:\Users\task_1604615499\build\symbols\ntdll.pdb\D3AE91CEDD9309EF777F2FD5120010BE1\ntdll.sym` for `C:\windows\SYSTEM32\ntdll.dll`
[task 2020-11-05T22:45:24.546Z] 22:45:24 INFO - fix-stacks: note: this is expected and harmless for system libraries on debug automation runs
[task 2020-11-05T22:45:24.547Z] 22:45:24 INFO - fix-stacks: The system cannot find the path specified. (os error 3)
[task 2020-11-05T22:45:24.547Z] 22:45:24 INFO - #15: RtlUserThreadStart [C:\windows\SYSTEM32\ntdll.dll + 0x71461]
[task 2020-11-05T22:45:24.547Z] 22:45:24 INFO - [Parent 5524, Unnamed thread 136ce874000] WARNING: Resource acquired is being released in non-LIFO order; why?
[task 2020-11-05T22:45:24.548Z] 22:45:24 INFO - : file /builds/worker/checkouts/gecko/xpcom/threads/BlockingResourceBase.cpp:292
[task 2020-11-05T22:45:24.548Z] 22:45:24 INFO - --- Mutex : dumpSafetyLock (currently acquired)
[task 2020-11-05T22:45:24.548Z] 22:45:24 INFO - calling context
[task 2020-11-05T22:45:24.549Z] 22:45:24 INFO - [stack trace unavailable]
[task 2020-11-05T22:45:24.549Z] 22:45:24 INFO - ###!!! [Child][MessageChannel::SendAndWait] Error: Channel error: cannot send/recv
[task 2020-11-05T22:45:24.550Z] 22:45:24 INFO - ###!!! [Child][MessageChannel] Error: (msgtype=0xA20003,name=PTexture::Msg_Destroy) Channel error: cannot send/recv
[task 2020-11-05T22:45:24.550Z] 22:45:24 INFO - [GFX1-]: Receive IPC close with reason=AbnormalShutdown
[task 2020-11-05T22:45:24.550Z] 22:45:24 INFO - [GFX1-]: Receive IPC close with reason=AbnormalShutdo[wGnF
[task 2020-11-05T22:45:24.550Z] 22:45:24 INFO - X1-]: Receive IPC close with reason=AbnormalShutdown
[task 2020-11-05T22:45:24.551Z] 22:45:24 INFO - [GFX1-]: Receive IPC close with reason=AbnormalShutdown
[task 2020-11-05T22:45:24.551Z] 22:45:24 INFO - [GFX1-]: Receive IPC close with reason=AbnormalShutdown
[task 2020-11-05T22:45:24.551Z] 22:45:24 INFO - ###!!! [Child][MessageChannel] Error: (msgtype=0xB60026,name=PWebRenderBridge::Msg_Shutdown) Channel error: cannot send/recv
[task 2020-11-05T22:45:24.552Z] 22:45:24 INFO - ###!!! [Child][MessageChannel::SendAndWait] Error: (msgtype=0x370019,name=PCompositorBridge::Msg_WillClose) Channel error: cannot send/recv
[task 2020-11-05T22:45:24.552Z] 22:45:24 INFO - ###!!! [Child][MessageChannel] Error: (msgtype=0xB60026,name=PWebRenderBridge::Msg_Shutdown) Channel error: cannot send/recv
[task 2020-11-05T22:45:24.552Z] 22:45:24 INFO - ###!!! [Child][MessageChannel] Error: (msgtype=0xD,name=PAPZ::Msg_Destroy) Channel error: cannot send/recv
[task 2020-11-05T22:45:24.552Z] 22:45:24 INFO - ###!!! [Child][MessageChannel::SendAndWait] Error: (msgtype=0x370019,name=PCompositorBridge::Msg_WillClose) Channel error: cannot send/recv
[task 2020-11-05T22:45:24.552Z] 22:45:24 INFO - ###!!! [Child][MessageChannel] Error: (msgtype=0xB60026,name=PWebRenderBridge::Msg_Shutdown) Channel error: cannot send/recv
[task 2020-11-05T22:45:24.553Z] 22:45:24 INFO - ###!!! [Child][MessageChannel] Error: (msgtype=0xD,name=PAPZ::Msg_Destroy) Channel error: cannot send/recv
[task 2020-11-05T22:45:24.553Z] 22:45:24 INFO - ###!!! [Child][MessageChannel::SendAndWait] Error: (msgtype=0x370019,name=PCompositorBridge::Msg_WillClose) Channel error: cannot send/recv
[task 2020-11-05T22:45:24.555Z] 22:45:24 INFO - ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to c:\users\task_1604615499\appdata\local\temp\tmp5tnpuu.mozrunner\runreftest_leaks_gpu_pid9740.log
[task 2020-11-05T22:45:24.555Z] 22:45:24 INFO - [9740, Main Thread] WARNING: XPCOM_MEM_BLOAT_LOG is set, disabling native allocations.: file /builds/worker/checkouts/gecko/tools/profiler/core/platform.cpp:251
[task 2020-11-05T22:45:24.556Z] 22:45:24 INFO - [GFX1-]: Receive IPC close with reason=AbnormalShutdown
[task 2020-11-05T22:45:24.556Z] 22:45:24 INFO - [GFX1-]: Receive IPC close with reason=AbnormalShutdown
[task 2020-11-05T22:45:24.556Z] 22:45:24 INFO - [GFX1-]: Receive IPC close with reason=AbnormalShutdown
[task 2020-11-05T22:45:24.557Z] 22:45:24 INFO - REFTEST TEST-UNEXPECTED-FAIL | layout/reftests/svg/fragid-shadow-5.html == layout/reftests/svg/fragid-shadow-ref.html | crash-check | This test left crash dumps behind, but we weren't expecting it to!
[task 2020-11-05T22:45:24.557Z] 22:45:24 INFO - REFTEST INFO | Found unexpected crash dump file C:\Users\task_1604615499\AppData\Local\Temp\tmp5tnpuu.mozrunner\minidumps\906c2225-27bb-4c9a-bd51-72342523447c.dmp
[task 2020-11-05T22:45:24.557Z] 22:45:24 INFO - REFTEST INFO | Found unexpected crash dump file C:\Users\task_1604615499\AppData\Local\Temp\tmp5tnpuu.mozrunner\minidumps\906c2225-27bb-4c9a-bd51-72342523447c.extra
[task 2020-11-05T22:45:24.557Z] 22:45:24 INFO - REFTEST TEST-PASS | layout/reftests/svg/fragid-shadow-5.html == layout/reftests/svg/fragid-shadow-ref.html | image comparison, max difference: 0, number of differing pixels: 0
[task 2020-11-05T22:45:24.558Z] 22:45:24 INFO - REFTEST TEST-END | layout/reftests/svg/fragid-shadow-5.html == layout/reftests/svg/fragid-shadow-ref.html```
Updated•5 years ago
|
Comment 1•5 years ago
|
||
With an occurrence of 3 fails out of 5 retriggers, the summary was changed to frequent.
Started most probably with the landing of Bug 1673983.
:mattwoodrow do you have a bit of time to look into this?
Thank you.
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 3•5 years ago
|
||
It's possible for WR to do an update and trigger a composite, without calling Begin/EndFrame.
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 5•5 years ago
|
||
WR can run an update which outputs the compositor surfaces, but never calls Begin/EndFrame.
Updated•5 years ago
|
Comment 6•5 years ago
|
||
Set release status flags based on info from the regressing bug 1673983
Comment 8•5 years ago
|
||
| bugherder | ||
| Comment hidden (Intermittent Failures Robot) |
Description
•