Bug 1675665 - Don't draw surfaces if we're not currently presenting a frame. r=lsalzman

WR can run an update which outputs the compositor surfaces, but never calls Begin/EndFrame.

Differential Revision: https://phabricator.services.mozilla.com/D96380